--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "user-directory",
+  "homepage": "http://daniarinker.github.io/employee-directory"
   "version": "0.1.0",
   "private": true,
   "dependencies": {
